--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.2.1",
     "twelvelabs-js": "^1.0.2"
   },
   "devDependencies": {
