--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.3",
+    "groq-sdk": "^0.33.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "mongodb": "^6.20.0",
     "next": "15.5.4",
     "react": "19.1.0",
